--- a/Cover_Letter_chain_github.ipynb
+++ b/Cover_Letter_chain_github.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,32 +39,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
+    "#from langchain.chat_models import ChatOpenAI\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "#from langchain_community.chat_models import ChatOpenAI\n",
     "from langchain.prompts import ChatPromptTemplate\n",
     "from langchain.chains import LLMChain\n",
     "from langchain.chains import SequentialChain\n",
-    "from langchain.document_loaders import PyPDFLoader\n",
+    "#from langchain.document_loaders import PyPDFLoader\n",
+    "from langchain_community.document_loaders import PyPDFLoader\n",
     "import docx\n",
     "from bs4 import BeautifulSoup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "llm_model = \"gpt-4o\"\n",
-    "llm = ChatOpenAI(temperature=0.0, model=llm_model)"
+    "llm = ChatOpenAI(temperature=0.0, model=llm_model, openai_api_key=openai_api_key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,24 +152,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\hcwu2\\OneDrive\\Documents\\Visual Studio Project\\Cover Letter\\venv\\Lib\\site-packages\\langchain_core\\_api\\deprecation.py:139: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use RunnableSequence, e.g., `prompt | llm` instead.\n",
-      "  warn_deprecated(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Define individual chain and chain of thoughts\n",
     "chain_one = LLMChain(llm=llm, prompt=prompt_job_description, output_key=\"job_summary\")\n",
     "chain_two = LLMChain(llm=llm, prompt=prompt_profiler, output_key=\"personal_profile\")\n",
     "chain_three = LLMChain(llm=llm, prompt=prompt_cover_letter_composer, output_key=\"cover_letter_draft\")\n",
     "chain_four = LLMChain(llm=llm, prompt= prompt_proof_reader, output_key=\"cover_letter_final\")\n",
+    "\n",
+    "\n",
+    "\n",
     "#result = chain.run(input)\n",
     "sequential_chain = SequentialChain(\n",
     "    chains=[chain_one, chain_two, chain_three, chain_four],\n",
@@ -178,16 +175,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to extract text from PDF\n",
     "def extract_text_from_pdf(file):\n",
-    "    loader = PyPDFLoader(file)\n",
-    "    documents = loader.load()\n",
-    "    text = \" \".join([doc.page_content for doc in documents])\n",
-    "    return text\n",
+    "    try:\n",
+    "        # Assuming 'file' is a file-like object\n",
+    "        file_path = file.name\n",
+    "        loader = PyPDFLoader(file_path)\n",
+    "        text = loader.load()\n",
+    "        return text\n",
+    "    except Exception as e:\n",
+    "        logging.error(\"Error extracting text from PDF\", exc_info=True)\n",
+    "        return str(e)\n",
     "\n",
     "# Function to extract text from DOCX\n",
     "def extract_text_from_docx(file):\n",
@@ -228,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,9 +289,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Closing server running on port: 7860\n",
+      "Closing server running on port: 7860\n",
+      "Closing server running on port: 7860\n",
+      "Closing server running on port: 7860\n",
+      "Running on local URL:  http://127.0.0.1:7860\n",
+      "\n",
+      "Could not create share link. Please check your internet connection or our status page: https://status.gradio.app.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new SequentialChain chain...\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "Error fetching job description: Fetched job description content is too short.\n",
+      "Error fetching job description: Fetched job description content is too short.\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new SequentialChain chain...\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "#Use Gradio to generate web UI\n",
     "import gradio as gr\n",
@@ -309,13 +363,20 @@
     "                    description=\"Upload your resume, Linkedin profile, and job description URL to generate your customized cover letter\"\n",
     "                   )\n",
     "#demo.launch(share=True)\n",
-    "demo.launch(share=True)"
+    "demo.launch()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -333,5 +394,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
